# tidynamics

./: .gitignore  .travis.yml  CITATION  CONTRIBUTORS  LICENSE  README.rst  pyproject.toml  setup.py
.binder/: postBuild
.github/workflows/: test.yml
binder/: README.txt
doc/: .gitignore  Makefile  algorithms.rst  bibtex.bib  conf.py  contents.rst  contributors.rst  correlation.rst  data_format.rst  index.ipynb  index.rst  zbibliography.rst
examples/: README.txt  example_acf_1.py  example_msd_1.py  plot_acf_1.py  plot_msd_1.py  plot_nlogn_scaling.py  tidynamics_tool.py
paper/: paper.bib  paper.md
tests/: test_acf_1.py  test_acf_2.py  test_correlation_1.py  test_correlation_1d.py  test_cross_msd_1.py  test_msd_1.py  test_msd_2.py  test_msd_3.py
tidynamics/: VERSION  __init__.py  _acf.py  _correlation.py  _msd.py  core.py  correlation.py  msd.py
